--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.h2.console.path=/h2-console
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.jackson.property-naming-strategy=SNAKE_CASE
+#spring.jackson.property-naming-strategy=SNAKE_CASE
 
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
