--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,9 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
 #server.error.include-message=always
+
+management.health.db.enabled=true
+#management.health.defaults.enabled=true
+management.health.diskspace.enabled=true
+management.endpoint.health.show-details=always
+#management.endpoints.web.exposure.include=*
