--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,9 @@ management.health.db.enabled=true
 management.health.diskspace.enabled=true
 management.endpoint.health.show-details=always
 #management.endpoints.web.exposure.include=*
+
+keycloak.auth-server-url=http://localhost:8080/auth
+
+## spring security resource server configuration
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:18080/auth/realms/nosso-cartao
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:18080/auth/realms/nosso-cartao/protocol/openid-connect/certs
