feat: exemplos de metricas

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
 <!--            <version>0.9.1</version>-->
 <!--        </dependency>-->
 
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
