--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,11 @@ management.health.db.enabled=true
 #management.health.defaults.enabled=true
 management.health.diskspace.enabled=true
 management.endpoint.health.show-details=always
-#management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=info,health,prometheus
+management.endpoints.prometheus.enabled=true
+
+management.metrics.tags.aplicacao=${NOME_DA_APLICACAO:serviço de proposta}
+management.metrics.tags.ambiente=${AMBIENTE:desenvolvimento}
 
 keycloak.auth-server-url=http://localhost:8080/auth
 
