--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,18 @@ keycloak.auth-server-url=http://localhost:8080/auth
 ## spring security resource server configuration
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:18080/auth/realms/nosso-cartao
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:18080/auth/realms/nosso-cartao/protocol/openid-connect/certs
+
+# Jaeger - Habilita ou não
+opentracing.jaeger.enabled=${JAEGER_ENABLED:true}
+
+# Jaeger - Nome do serviço
+opentracing.jaeger.service-name=${spring.application.name:meuservico}
+
+# Jaeger - Endereço para enviar os metadados (trace, span, etc)
+opentracing.jaeger.http-sender.url=${JAEGER_ENDPOINT:http://localhost:14268/api/traces}
+
+# Jaeger - Tipo de amostragem (probabilístico) e sua configuração (1 = 100%)
+opentracing.jaeger.probabilistic-sampler.sampling-rate=${JAEGER_SAMPLER:1}
+
+opentracing.jaeger.const-sampler.decision=${JAEGER_SAMPLER:true}
+opentracing.jaeger.rate-limiting-sampler.max-traces-per-second=${JAEGER_SAMPLER:10}
