--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,3 +46,8 @@ opentracing.jaeger.probabilistic-sampler.sampling-rate=${JAEGER_SAMPLER:1}
 
 opentracing.jaeger.const-sampler.decision=${JAEGER_SAMPLER:true}
 opentracing.jaeger.rate-limiting-sampler.max-traces-per-second=${JAEGER_SAMPLER:10}
+
+#opentracing.spring.cloud.jdbc.enabled=false
+
+#Não funcionou enviando as transações do feign
+opentracing.spring.cloud.feign.enabled=false
